Fix #2688. Quote with authorship. Wrong position.

--- a/exe/webui/style/base.css
+++ b/exe/webui/style/base.css
@@ -106,7 +106,7 @@ ol.auto-numbered{counter-reset:item}
 .exe-link-data{font-size:.8em;margin:0 .2em}
 .exe-link-data abbr{cursor:help}
 /* Quote With Authorship */
-.styled-qc{font-family:Georgia,serif;font-style:italic;width:80%;margin:1.5em auto;padding:0.25em 40px;position:relative}
+.styled-qc{font-family:Georgia,serif;font-style:italic;width:80%;margin:1.5em auto;padding:0.25em 3.5em;position:relative}
 .styled-qc:before{display:block;content:"\201C";font-size:5em;position:absolute;left:0;top:-20px}
 /* Responsive design */
 @media all and (max-width: 780px) {
